pequeños cambios en carta confirmacion y cambio en titulo del despliegue de bloqueos

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -44,7 +44,7 @@
 } ?>">Inicio</a></li>
                 <li class="active">Busqueda de bloqueos</li>
             </ol>
-            <h3 style="margin-left: 18px;">PROGRAMAS CON AEREO CONFIRMADO EN <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
+            <h3 style="margin-left: 18px;">PROGRAMAS CON AEREO CONFIRMADO A <b style="color:#FF9900;"><?php echo Session::get('sess_BP_ciudadDes'); ?></b></h3>
 
         </div>
         <div class="container">
