--- a/views/pago/centerBox/exito.phtml
+++ b/views/pago/centerBox/exito.phtml
@@ -1,7 +1,30 @@
-<div class="alert alert-dismissable alert-success" style="display:block; margin: 5px;">
-    <h2><strong>&iexcl;GRACIAS POR SU COMPRA!</strong></h2>    
-    <br>
-    <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>ok.png" align= "left" style="margin-right: 15px;">
-    <h4>Pago realizado con &eacute;xito.</h4>
-</div>
-<script>endLoad();</script>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="<?php echo CHARSET; ?>">
+    <meta http-equiv="Content-Type" content="text/html; charset=<?php echo CHARSET; ?>"  />
+    <title><?php if(isset($this->titulo)){ echo $this->titulo; } ?></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Avant">
+    <meta name="author" content="The Red Team">
+
+    <!-- <link href="assets/less/styles.less" rel="stylesheet/less" media="all"> -->
+    <script src="<?php echo $_layoutParamsCB['ruta_js']; ?>jquery-1.10.2.min.js"></script>
+    <link rel="stylesheet" href="<?php echo $_layoutParamsCB['ruta_css']; ?>styles.min.css">
+    <link href='<?php echo $_layoutParamsCB['ruta_css']; ?>google-fonts.css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
+</head>
+<body style="padding-top: 0px;">
+    
+    <div class="alert alert-dismissable alert-success" style="display:block;">
+        <h2><strong>&iexcl;GRACIAS POR SU COMPRA!</strong></h2>    
+        <br>
+        <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>ok.png" align= "left" style="margin-right: 15px;">
+        <h4>Pago realizado con &eacute;xito.</h4>
+    </div>
+    <script>endLoad();</script>
+
+</body>
+</html>
+<?php Session::destroy('sess_status_pago'); Session::destroy('sess_msj_pago'); ?>
