Mejorando diseños exito y fracaso

--- a/views/pago/centerBox/exito.phtml
+++ b/views/pago/centerBox/exito.phtml
@@ -17,7 +17,7 @@
 </head>
 <body style="padding-top: 0px;">
     
-    <div class="alert alert-dismissable alert-success" style="display:block;">
+    <div class="alert alert-dismissable alert-success">
         <h2><strong>&iexcl;GRACIAS POR SU COMPRA!</strong></h2>    
         <br>
         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>ok.png" align= "left" style="margin-right: 15px;">
@@ -27,4 +27,3 @@
 
 </body>
 </html>
-<?php Session::destroy('sess_status_pago'); Session::destroy('sess_msj_pago'); ?>
