--- a/views/pago/centerBox/fracaso.phtml
+++ b/views/pago/centerBox/fracaso.phtml
@@ -17,18 +17,12 @@
 </head>
 <body style="padding-top: 0px;">
 
-    <div class="alert alert-dismissable alert-danger" style="display:block; margin: 5px;">
+    <div class="alert alert-dismissable alert-danger">
         <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
         <br>
         <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
         <h4>Cont&aacute;ctese con el administrador.</h4>
-        <h4><?php
-            if(!Session::get('sess_status_pago')) {
-                echo Session::get('sess_msj_pago');
-
-                Session::destroy('sess_status_pago');
-                Session::destroy('sess_msj_pago');
-            } ?></h4>
+        <h4><?php if(!$this->status) { echo $this->msj; } ?></h4>
     </div>
     <script>endLoad();</script>
 
