se cambia fecha date por fecha de la reserva

--- a/views/cartas/panamericana.phtml
+++ b/views/cartas/panamericana.phtml
@@ -28,7 +28,7 @@
                         Tel&eacute;fonos : <?php echo ENT_FONO; ?><br /><br />	      
                         <a href="<?php echo ENT_WEB; ?>" target="_blank"> <?php echo ENT_WEB; ?> <br /></a>
                         <br />
-                        <?php echo ENT_CIUDAD . ', ' . date("d F Y"); ?>
+                        <?php echo ENT_CIUDAD . ', ' . $this->CC_fecha; ?>
                 </td>
 
 
