se agrega carta de exito al controller de pago

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -89,6 +89,15 @@
                 <td colspan="3"><hr noshade="noshade" /></td>
             </tr>
         </table>
+        
+        <table width="100%" border="0" align="center" cellpadding="2" cellspacing="2" class="Base">
+            <tr>
+                <td colspan="3">De acuerdo a la solicitud de Reserva por Ud. efectuada, confirmo lo siguiente: </td>
+            </tr>
+            <tr>
+                <td colspan="3"><hr noshade="noshade" /></td>
+            </tr>
+        </table>
         &nbsp; &nbsp; &nbsp; Incluye:<br />
         
         <table width="98%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#E8E6E1">
