--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -83,15 +83,15 @@ $(function ()
             </tr>
 
             <tr align="center" style="color: #fff; background-color: #2bbce0; border-color: #2bbce0; padding:2px;">
-                <td style="padding:2px;">Nombre</td>
-                <td style="padding:2px;">Apellidos</td>
+                <!--<td style="padding:2px;">Nombre</td>
+                <td style="padding:2px;">Apellidos</td>-->
                 <td style="padding:2px;">Email</td>
                 <td style="padding:2px;">Teléfono</td>
             </tr>
 
             <tr align="center">
-                <td><input type="text" name="txtNombre_pago" id="txtNombre_pago"></td>
-                <td><input type="text" name="txtApellidos_pago" id="txtApellidos_pago"></td>
+                <!--<td><input type="text" name="txtNombre_pago" id="txtNombre_pago"></td>
+                <td><input type="text" name="txtApellidos_pago" id="txtApellidos_pago"></td>-->
                 <td><input type="text" name="txtEmail_pago" id="txtEmail_pago"></td>
                 <td><input type="text" name="txtTelefono_pago" id="txtTelefono_pago"></td>
             </tr>
