Agregando redirección al banco de chile

--- a/views/json/centerBox/pago_travelclub.phtml
+++ b/views/json/centerBox/pago_travelclub.phtml
@@ -1,1 +1,2 @@
-<iframe src="http://travelclub-test.herokuapp.com/checkout/<?php echo $this->hash; ?>/checkout" style="width:100%; height:450px;" frameborder="0"></iframe>
+Procesando...
+<script>$(location).attr('href', '<?php echo $this->url_api; ?>checkout/<?php echo $this->hash; ?>/checkout');</script>
