--- a/views/pago/fracaso.phtml
+++ b/views/pago/fracaso.phtml
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="<?php echo CHARSET; ?>">
-    <meta http-equiv="Content-Type" content="text/html; charset=<?php echo CHARSET; ?>"  />
-    <title><?php if(isset($this->titulo)){ echo $this->titulo; } ?></title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Avant">
-    <meta name="author" content="The Red Team">
+<div id="page-content" >
+    <div id='wrap'>
+        <div id="page-heading">
+            <ol class="breadcrumb">
+                <li><a href="">Inicio</a></li>
+                <li class="active">Busqueda de bloqueos</li>
+            </ol>
+            <h3 style="margin-left: 18px;">&nbsp;&nbsp;</h3>
 
-    <!-- <link href="assets/less/styles.less" rel="stylesheet/less" media="all"> -->
-    <script src="<?php echo $_layoutParamsCB['ruta_js']; ?>jquery-1.10.2.min.js"></script>
-    <link rel="stylesheet" href="<?php echo $_layoutParamsCB['ruta_css']; ?>styles.min.css">
-    <link href='<?php echo $_layoutParamsCB['ruta_css']; ?>google-fonts.css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
-</head>
-<body style="padding-top: 0px;">
+        </div>
+        <div class="container">
 
-    <div class="alert alert-dismissable alert-danger">
-        <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
-        <br>
-        <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
-        <h4>Cont&aacute;ctese con el administrador.</h4>
-        <h4><?php if(!$this->status) { echo $this->msj; } ?></h4>
+            <div class="alert alert-dismissable alert-danger">
+                <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
+                <br>
+                <img src="<?php echo $_layoutParams['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
+                <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club</h4>
+                <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
+            </div>
+
+        </div>
     </div>
-    <script>endLoad();</script>
-
-</body>
-</html>
+</div>
