se cambia tamaño y letra de vouvher

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -81,7 +81,7 @@
                                     </table>
                                     <br />
                                     
-                                    <center><h4><u><b><a href="<?php echo BASE_URL;?>/booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Voucher aca</a></b></u></h4></center>
+                                    <center><h3><u><b><font face="calibri"><a href="<?php echo BASE_URL;?>/booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Voucher </a></font></b></u></h3></center>
                                         <hr noshade="noshade" />                                       </tr>
                                    
 
