se agrega validacion para no mostrar text area cuando se ingrese del boton de pago y se agrega sesion en la parte de login para el booking

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -289,7 +289,7 @@ Session::set('sessRP_cntPasajeros', $rP_cntRegistros);
 ?>
 
 
-    <table class="table table-bordered">
+    <table class="table table-bordered" <?php if(Session::get('sess_boton_pago')){ ?>style="display:none;"<?php } ?>>
         <tr>
             <td>
                 <textarea name="rP_txtComentario" id="rP_txtComentario" cols="50" rows="4" class="form-control" placeholder="Escribe un comentario..."></textarea>
