--- a/views/pago/centerBox/fracaso.phtml
+++ b/views/pago/centerBox/fracaso.phtml
@@ -1,23 +1,7 @@
-<div id="page-content" >
-    <div id='wrap'>
-        <div id="page-heading">
-            <ol class="breadcrumb">
-                <li><a href="">Inicio</a></li>
-                <li class="active">Busqueda de bloqueos</li>
-            </ol>
-            <h3 style="margin-left: 18px;">&nbsp;&nbsp;</h3>
-
-        </div>
-        <div class="container">
-
-            <div class="alert alert-dismissable alert-danger">
-                <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
-                <br>
-                <img src="<?php echo $_layoutParams['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
-                <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club</h4>
-                <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
-            </div>
-
-        </div>
-    </div>
+<div class="alert alert-dismissable alert-danger">
+    <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
+    <br>
+    <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
+    <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club</h4>
+    <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
 </div>
