se cambian texto de imprimir y de la carta de travel

--- a/views/bloqueos/centerBox/imprimir.phtml
+++ b/views/bloqueos/centerBox/imprimir.phtml
@@ -10,7 +10,7 @@
     ?>
 
 
-    <center><h4><i><b><?php echo $this->objOpcionPrograma[0]->getNombre(); ?></b></i></h4></center>
+    <center><h4><b><?php echo $this->objOpcionPrograma[0]->getNombre(); ?></b></h4></center>
     
         <div class="row">
             <div class="col-lg-1"></div>
