Agregando parametro al login buscador

--- a/views/login/login_form.phtml
+++ b/views/login/login_form.phtml
@@ -1,5 +1,4 @@
-
-<iframe   frameborder="0"width="100%" height="235"src="<?php echo BASE_URL; ?>/login" id="frameid" scrolling="no"name="frameid"target="frame2">    
+<iframe   frameborder="0"width="100%" height="235"src="<?php echo BASE_URL; ?>login/index/web" id="frameid" scrolling="no"name="frameid"target="frame2">    
 </iframe>
 <script>
 $('#frameid').load(function(){
