se cambia carta tarvelclub

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -38,7 +38,7 @@
 
                                     <table width="100%" border="0" align="center" cellpadding="2" cellspacing="2" class="Base">
                                         <tr>
-                                            <td height="60" colspan="3" align="center"><span class="Cot">Confirmaci&oacute;n de Reserva Online</span></td>
+                                            <td height="60" colspan="3" align="center"><span class="Cot">Confirmaci&oacute;n de Compra Online</span></td>
                                         </tr>
 
                                         <tr>
@@ -139,7 +139,7 @@
 
                                                       echo '<tr>
                                                       <td width="50%" class="Base">
-                                                      <strong>&middot;</strong>&nbsp; '.$suma_total.' Pax '.$objDF->getNombre().'<strong></strong>
+                                                      <strong>&middot;</strong>&nbsp; '/*.$suma_total.' Pax '*/.$objDF->getNombre().'<strong></strong>
                                                       </td>
                                                       <td width="10%" class="Base">';
 
