SE CAMBIA TAMAÑO DE TEXT EN RESERVA

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -94,8 +94,8 @@ $(function ()
             <tr align="center">
                 <!--<td><input type="text" name="txtNombre_pago" id="txtNombre_pago"></td>
                 <td><input type="text" name="txtApellidos_pago" id="txtApellidos_pago"></td>-->
-                <td><input type="text" name="txtEmail_pago" id="txtEmail_pago"></td>
-                <td><input type="text" name="txtTelefono_pago" id="txtTelefono_pago"></td>
+                <td><input type="text" name="txtEmail_pago" id="txtEmail_pago" class="form-control" style="width:50%;"></td>
+                <td><input type="text" name="txtTelefono_pago" id="txtTelefono_pago"class="form-control"style="width:50%;"></td>
             </tr>
 
         </table>
